# mario-kart

./: .gitignore  CMakeLists.txt  Makefile  README.md  Vector.cpp
.github/workflows/: release.yml
Common/: AllegroKeyboard.cpp  AllegroKeyboard.h  AllegroScreen.cpp  AllegroScreen.h  AllegroSystem.cpp  AllegroSystem.h  CMakeLists.txt  Camera.cpp  ColorDepth.h  Makefile  ObjectSize.cpp  ObjectSize.h  SuperMode7.cpp  SuperMode7.h  Track.cpp  Track.h  Vector.cpp  Vector.h  allegro.cpp  allegro.h
Game/: CMakeLists.txt  Camera.cpp  Camera.h  Game.cpp  Game.h  Makefile  Opponent.cpp  Opponent.h  Player.cpp  Player.h  Track.cpp  Track.h  game  main.cpp  newgame
TrackEditor/: Button.h  CMakeLists.txt  Makefile  TrackEditor  TrackEditor.cpp  TrackEditor.h  a.out  main.cpp
TrackEditor/Data/: Button.cpp
src/common/: AllegroKeyboard.cpp  AllegroKeyboard.h  AllegroScreen.cpp  AllegroSystem.cpp  CMakeLists.txt  SuperMode7.h  Track.cpp  Track.h  allegro.cpp  allegro.h
src/editor/: CMakeLists.txt  main.cpp
src/game/: CMakeLists.txt  Camera.cpp  Opponent.cpp  Player.cpp  main.cpp
